cluster/applications/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atticd-http
  namespace: atticd
spec:
  type: LoadBalancer
  selector:
    app: attic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
